--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Contact - My Page</title>
+    <script src="darkMode.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="topnav">
     <a href="index.html">Home</a>
     <a href="Spotify%20Game.html">Spotify Game</a>
     <a href="#projects">Group Chat</a>
-    <a href="#projects">Image Labeling</a>
+    <a href="imageLabel.html">Image Labeling</a>
     <a class="active" href="contact.html">Contact</a>
+    <button id="theme-toggle" class="dark-mode-button">Dark Mode</button>
 </div>
 <div class="wrap">
     <div class="container">
         <div class="main-content">
-            <p class="font-effect-anaglyph">Let's get in touch</p>
+            <p class="section-text">Let's get in touch</p>
         </div>
         <div class="contact-block">
             <p>email: marcin.gronicki@gmail.com</p>
