--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </a>
 
         <!-- For Image Labeling -->
-        <a href="#projects" class="content" style="text-decoration: none; color: inherit;">
+        <a href="imageLabel.html" class="content" style="text-decoration: none; color: inherit;">
             <div class="text-block">
                 <b class="block-title">Image Labeling</b>
                 <p>Application that allows browsing images saved on disk and then adding to them colored and named labels</p>
