--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
             <p class="section-text">Hi,</p>
             <p class="section-text">I am Marcin Gronicki</p>
         </div>
+        <p class="about-text">
+            I’m a <strong>third-year Computer Science student</strong> with a passion for <strong>software development</strong> and a keen interest in the intricate workings of <strong>operating systems</strong> and <strong>low-end computers</strong>. In addition to my fascination with traditional computing, I’m excited about newer technologies like <strong>AI</strong> and how they’re transforming the landscape of software development. With a toolkit of programming languages including <strong>C#</strong>, <strong>C</strong>, and <strong>C++</strong>, I’m eager to merge my knowledge with emerging technologies to create <strong>impactful and innovative solutions</strong>.
+        </p>
+
+
+
 
         <a href="Spotify%20Game.html" class="content" style="text-decoration: none; color: inherit;">
             <div class="text-block">
