working slideshow container and groupChat href

--- a/groupChat.html
+++ b/groupChat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Spotify Game</title>
+    <title>Group Chat</title>
     <script src="slideshow.js" defer></script>
     <script src="darkMode.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +14,8 @@
 <body>
 <div class="topnav">
     <a href="index.html">Home</a>
-    <a class="active" href="Spotify%20Game.html">Spotify Game</a>
-    <a href="groupChat.html">Group Chat</a>
+    <a href="Spotify%20Game.html">Spotify Game</a>
+    <a class="active" href="groupChat.html">Group Chat</a>
     <a href="imageLabel.html">Image Labeling</a>
     <a href="contact.html">Contact</a>
     <button id="theme-toggle" class="dark-mode-button">Dark Mode</button>
@@ -24,7 +24,7 @@
 <div class="wrap">
     <div class="container">
         <div class="main-content">
-            <p class="section-text">Spotify Game</p>
+            <p class="section-text">Group Chat</p>
         </div>
         <div class="slideshow-container">
             <button id="pause-button" onclick="togglePause()" style="color: white">&#10074;&#10074;</button>
@@ -32,19 +32,19 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="app1.png" style="width:100%">
+                <img src="label1.png" style="width:100%">
                 <div class="text">Choose your files using built in file browser</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="app2.png" style="width:100%">
+                <img src="label2.png" style="width:100%">
                 <div class="text">You can select many files and preview them</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="app3.png" style="width:100%">
+                <img src="label3.png" style="width:100%">
                 <div class="text">Add colored labels to selected image and name them</div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
