--- a/imageLabel.html
+++ b/imageLabel.html
@@ -15,7 +15,7 @@
 <div class="topnav">
     <a href="index.html">Home</a>
     <a href="Spotify%20Game.html">Spotify Game</a>
-    <a href="#projects">Group Chat</a>
+    <a href="groupChat.html">Group Chat</a>
     <a class="active" href="imageLabel.html">Image Labeling</a>
     <a href="contact.html">Contact</a>
     <button id="theme-toggle" class="dark-mode-button">Dark Mode</button>
