--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="topnav">
     <a class="active" href="index.html">Home</a>
     <a href="Spotify%20Game.html">Spotify Game</a>
-    <a href="#projects">Group Chat</a>
+    <a href="groupChat.html">Group Chat</a>
     <a href="imageLabel.html">Image Labeling</a>
     <a href="contact.html">Contact</a>
     <button id="theme-toggle" class="dark-mode-button">Dark Mode</button>
@@ -28,10 +28,6 @@
         <p class="about-text">
             I’m a <strong>third-year Computer Science student</strong> with a passion for <strong>software development</strong> and a keen interest in the intricate workings of <strong>operating systems</strong> and <strong>low-end computers</strong>. In addition to my fascination with traditional computing, I’m excited about newer technologies like <strong>AI</strong> and how they’re transforming the landscape of software development. With a toolkit of programming languages including <strong>C#</strong>, <strong>C</strong>, and <strong>C++</strong>, I’m eager to merge my knowledge with emerging technologies to create <strong>impactful and innovative solutions</strong>.
         </p>
-
-
-
-
         <a href="Spotify%20Game.html" class="content" style="text-decoration: none; color: inherit;">
             <div class="text-block">
                 <b class="block-title">Spotify Game</b>
@@ -48,7 +44,7 @@
 
         <!-- Repeat for other content blocks -->
         <!-- For Group Chat -->
-        <a href="#projects" class="content" style="text-decoration: none; color: inherit;">
+        <a href="groupChat.html" class="content" style="text-decoration: none; color: inherit;">
             <div class="text-block">
                 <b class="block-title">Group Chat</b>
                 <p>TCP/IP group chat, with server application allowing to manage connected clients</p>
