--- a/Spotify Game.html
+++ b/Spotify Game.html
@@ -26,26 +26,57 @@
         <div class="main-content">
             <p class="section-text">Spotify Game</p>
         </div>
+        <div class="about-text">
+        <p>The <strong>Spotify Stats Game</strong> is a fun and interactive guessing game that allows players to test their 
+        knowledge of their friends' <strong>music tastes</strong>. By leveraging the <strong>Spotify API</strong> for <strong>real-time data</strong>, 
+        players are challenged to guess who is listening to a particular <strong>song</strong> or <strong>artist</strong>. 
+        The game supports <strong>login</strong> and <strong>authorization</strong> through <strong>Spotify's OAuth 2.0</strong>, and once logged in, 
+        users can see their <strong>Spotify username</strong> and <strong>profile photo</strong>. The game also supports <strong>session</strong> 
+        creation and joining, allowing friends to <strong>play together</strong>. Additionally, there is a built-in <strong>chat feature</strong> 
+        for players to communicate during the game.
+
+        </p>
+        <p class="current-progress" ><strong>
+            Current Progress:
+        </strong></p>
+        <ul>
+            <li><strong>Login & Authorization:</strong> Fully functional Spotify login with OAuth 2.0.</li>
+            <li><strong>User Data Retrieval:</strong> Fetches username and profile picture from Spotify.</li>
+            <li><strong>Session Management:</strong> Players can create and join game sessions.</li>
+            <li><strong>Chat Feature:</strong> Players can communicate with each other during gameplay.</li>
+            <li><strong>Upcoming Improvements:</strong> Layout and UI/UX enhancements for a better player experience.</li>
+        </ul>
+        </div>
         <div class="slideshow-container">
             <button id="pause-button" onclick="togglePause()" style="color: white">&#10074;&#10074;</button>
 
 
             <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img src="app1.png" style="width:100%">
-                <div class="text">Choose your files using built in file browser</div>
+                <div class="numbertext">1 / 5</div>
+                <img src="game1.png" style="width:100%">
+                <div class="text">Login with Spotify acount</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img src="app2.png" style="width:100%">
-                <div class="text">You can select many files and preview them</div>
+                <div class="numbertext">2 / 5</div>
+                <img src="game2.png" style="width:100%">
+                <div class="text">Spotify API OAuth2.0 authorization</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img src="app3.png" style="width:100%">
-                <div class="text">Add colored labels to selected image and name them</div>
+                <div class="numbertext">3 / 5</div>
+                <img src="game3.png" style="width:100%">
+                <div class="text">Join or create game session, spotify API username and user profile photo request</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">4 / 5</div>
+                <img src="game4.png" style="width:100%">
+                <div class="text">Start game by providing existing session name or code and password</div>
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">5 / 5</div>
+                <img src="game5.png" style="width:100%">
+                <div class="text">At current stage after joining session is working chat instead of game. Chat will be displayed on side during real game</div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -54,6 +85,8 @@
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
         </div>
     </div>
 </div>
