--- a/groupChat.html
+++ b/groupChat.html
@@ -32,20 +32,21 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="label1.png" style="width:100%">
-                <div class="text">Choose your files using built in file browser</div>
+                <img src="chat1.png" style="width:100%">
+                <div class="text">Clients connects to the server</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="label2.png" style="width:100%">
-                <div class="text">You can select many files and preview them</div>
+                <img src="chat2.png" style="width:100%">
+                <div class="text">Progress bar representing stages of creating tcp connection</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="label3.png" style="width:100%">
-                <div class="text">Add colored labels to selected image and name them</div>
+                <img src="chat3.png" style="width:100%">
+                <div class="text">
+                    Clients can communicate with each other, and the server can broadcast messages to all clients. The server also logs events and provides the option to disconnect specific clients.</div>
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
