--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="section-text">I am Marcin Gronicki</p>
         </div>
         <p class="about-text">
-            I’m a <strong>third-year Computer Science student</strong> based in Warsaw, with a passion for <strong>software development</strong> and a strong interest in the workings of <strong>operating systems</strong> and <strong>backend technologies</strong>. Proficient in <strong>C#</strong>, <strong>C</strong>, and <strong>C++</strong>, I’m also learning <strong>Flutter</strong> and developing a <strong>web app</strong> using the <strong>.NET framework</strong>. I’m eager to deepen my knowledge of these technologies and take on <strong>large-scale projects</strong> that will bring the satisfaction of creating impactful and innovative solutions.
+            I’m a <strong>third-year Computer Science student</strong> based in Warsaw, with a passion for <strong>software development</strong> and a strong interest in the workings of <strong>operating systems</strong> and <strong>backend technologies</strong>. Proficient in <strong>C#</strong>, <strong>C</strong>, and <strong>C++</strong>, I’m also learning <strong>Flutter</strong> and developing a <strong>web app</strong> using the <strong>ASP.Net Core</strong>. I’m eager to deepen my knowledge of these technologies and take on <strong>large-scale projects</strong> that will bring the satisfaction of creating impactful and innovative solutions.
         </p>
         <a href="Spotify%20Game.html" class="content" style="text-decoration: none; color: inherit;">
             <div class="text-block">
