--- a/groupChat.html
+++ b/groupChat.html
@@ -26,25 +26,33 @@
         <div class="main-content">
             <p class="section-text">Group Chat</p>
         </div>
+        <div class="about-text">
+            <p>This <strong>C# Windows Forms project</strong> is a <strong>TCP/IP-based group chat application</strong> with two parts: a 
+            <strong>client app</strong> for user chat and a <strong>server app</strong> for administration. 
+            Clients connect to the server to <strong>send and receive messages in real-time</strong>. The <strong>server</strong> tracks 
+            <strong>connected users</strong>, enables <strong>browsing</strong>, allows <strong>admins to kick users
+            </strong>, and <strong>send broadcast messages</strong>. 
+            Additionally, it <strong>logs all events and messages.</strong></p>
+            </p>
+        </div>
         <div class="slideshow-container">
             <button id="pause-button" onclick="togglePause()" style="color: white">&#10074;&#10074;</button>
-
-
+            
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="chat1.png" style="width:100%">
+                <img src="chat1.png">
                 <div class="text">Clients connects to the server</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="chat2.png" style="width:100%">
+                <img src="chat2.png">
                 <div class="text">Progress bar representing stages of creating tcp connection</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="chat3.png" style="width:100%">
+                <img src="chat3.png">
                 <div class="text">
                     Clients can communicate with each other, and the server can broadcast messages to all clients. The server also logs events and provides the option to disconnect specific clients.</div>
             </div>
