--- a/Spotify Game.html
+++ b/Spotify Game.html
@@ -53,19 +53,19 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">1 / 5</div>
-                <img src="game1.png" style="width:100%">
+                <img src="game1.png">
                 <div class="text">Login with Spotify acount</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 5</div>
-                <img src="game2.png" style="width:100%">
+                <img src="game2c.png">
                 <div class="text">Spotify API OAuth2.0 authorization</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
-                <img src="game3.png" style="width:100%">
+                <img src="game3.png">
                 <div class="text">Join or create game session, spotify API username and user profile photo request</div>
             </div>
             <div class="mySlides fade">
