--- a/groupChat.html
+++ b/groupChat.html
@@ -40,19 +40,19 @@
             
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="chat1.png">
+                <img src="chat1.png" alt="chat1">
                 <div class="text">Clients connects to the server</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="chat2.png">
+                <img src="chat2.png" alt="chat2">
                 <div class="text">Progress bar representing stages of creating tcp connection</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="chat3.png">
+                <img src="chat3.png" alt="chat3">
                 <div class="text">
                     Clients can communicate with each other, and the server can broadcast messages to all clients. The server also logs events and provides the option to disconnect specific clients.</div>
             </div>
