--- a/Spotify Game.html
+++ b/Spotify Game.html
@@ -59,7 +59,7 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 5</div>
-                <img src="game2c.png">
+                <img src="game2.png">
                 <div class="text">Spotify API OAuth2.0 authorization</div>
             </div>
 
