add image label description

--- a/imageLabel.html
+++ b/imageLabel.html
@@ -26,6 +26,15 @@
         <div class="main-content">
             <p class="section-text">Image Labeling</p>
         </div>
+        <div class="about-text">
+            <p>A <strong>C# WPF Image Labeling Application</strong>
+                that enables users to browse their files through an integrated <strong>file browser</strong>,
+                preview images, and select specific images for editing.
+                The application allows users to add <strong>custom, colored, and named labels</strong> to images,
+                enhancing organization and classification. Once labeled, images can be
+                <strong>saved</strong> with their annotations for future reference or export.
+                </p>
+        </div>
         <div class="slideshow-container">
             <button id="pause-button" onclick="togglePause()" style="color: white">&#10074;&#10074;</button>
 
