--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <body>
 <div class="topnav">
     <a class="active" href="index.html">Home</a>
-    <a href="Spotify%20Game.html">Spotify Game</a>
-    <a href="groupChat.html">Group Chat</a>
-    <a href="imageLabel.html">Image Labeling</a>
+    <a href="carRental.html">Car Rental</a>
     <a href="contact.html">Contact</a>
     <button id="theme-toggle" class="dark-mode-button">Dark Mode</button>
 </div>
@@ -31,8 +29,8 @@
         <a href="Spotify%20Game.html" class="content" style="text-decoration: none; color: inherit;">
             <div class="text-block">
                 <b class="block-title">Spotify Game</b>
-                <p>Multiplayer tcp/ip game, where players are guessing each others favourite songs.</p>
-                <b>C#, Avalonia, OAuth2.0, Spotify Api, TCP/IP</b>
+                <p>Multiplayer peer to peer game, where players are guessing each others favourite songs.</p>
+                <b>Flutter, Dart, webRtc</b>
             </div>
             <div class="image-block">
                 <img src="app1.png" alt="app1" class="content-image">
@@ -42,31 +40,14 @@
             </div>
         </a>
 
-        <!-- Repeat for other content blocks -->
-        <!-- For Group Chat -->
-        <a href="groupChat.html" class="content" style="text-decoration: none; color: inherit;">
+        <a href="carRental.html" class="content" style="text-decoration: none; color: inherit;">
             <div class="text-block">
-                <b class="block-title">Group Chat</b>
-                <p>TCP/IP group chat, with server application allowing to manage connected clients</p>
-                <b>C#, Windows Forms, TCP/IP</b>
+                <b class="block-title">Car Rental</b>
+                <p>Complete Car Rental solution</p>
+                <b>ASP .Net Core, Blazor WASM</b>
             </div>
             <div class="image-block">
                 <img src="app2.png" alt="app2" class="content-image">
-                <div class="image-text">
-                    <p class="text">Learn More</p>
-                </div>
-            </div>
-        </a>
-
-        <!-- For Image Labeling -->
-        <a href="imageLabel.html" class="content" style="text-decoration: none; color: inherit;">
-            <div class="text-block">
-                <b class="block-title">Image Labeling</b>
-                <p>Application that allows browsing images saved on disk and then adding to them colored and named labels</p>
-                <b>C#, WPF</b>
-            </div>
-            <div class="image-block">
-                <img src="app3.png" alt="app3" class="content-image">
                 <div class="image-text">
                     <p class="text">Learn More</p>
                 </div>
