--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,8 @@
 <body>
 <div class="topnav">
     <a href="index.html">Home</a>
+    <a href="carRental.html">Car Rental</a>
     <a href="Spotify%20Game.html">Spotify Game</a>
-    <a href="groupChat.html">Group Chat</a>
-    <a href="imageLabel.html">Image Labeling</a>
     <a class="active" href="contact.html">Contact</a>
     <button id="theme-toggle" class="dark-mode-button">Dark Mode</button>
 </div>
