--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="topnav">
     <a class="active" href="index.html">Home</a>
     <a href="carRental.html">Car Rental</a>
+    <a href="Spotify%20Game.html">Spotify Game</a>
     <a href="contact.html">Contact</a>
     <button id="theme-toggle" class="dark-mode-button">Dark Mode</button>
 </div>
@@ -33,7 +34,7 @@
                 <b>Flutter, Dart, webRtc</b>
             </div>
             <div class="image-block">
-                <img src="app1.png" alt="app1" class="content-image">
+                <img src="combined.png" alt="app1" class="content-image">
                 <div class="image-text">
                     <p class="text">Learn More</p>
                 </div>
@@ -47,7 +48,7 @@
                 <b>ASP .Net Core, Blazor WASM</b>
             </div>
             <div class="image-block">
-                <img src="app2.png" alt="app2" class="content-image">
+                <img src="dashboard-rental-history.png" alt="app2" class="content-image">
                 <div class="image-text">
                     <p class="text">Learn More</p>
                 </div>
